
              ppmtoxpm: fix incorrect output with insanely large number of
              colors.

              pnmscalefixed: fix incorrect output with really big image and
              -pixels option.

              ppmdither: fix buffer overrun with insanely large dithering
              matrix.

              pnmpad: no longer accept old-style options (e.g. -t50).

              libnetpbm: Add pm_feed_from_filestream, pm_accept_to_filestream
              Standard Input feeder, Output accepter for pm_system.

              libnetpbm, programs that use color maps: fix buffer overrun
              with insanely deep images.

              merge build: Fix 'pnmcat'.  Introduced in Netpbm 11.00
              (September 2023).

              Build: Fix compile error on systems without 'asprintf'.
              Introduced in Netpbm 11.04 (September 2023).

              Build: Fix building of jpeg2ktopam and pamtojpeg2k with
              assertion checking by default.

23.09.27 BJH  Release 11.04.00

              pamaddnoise: add -salt.

              pamaddnoise: reject options that aren't meaningful for the type
              of noise specified rather than just ignore them.

              ppmtosixel: Add -7bit, so it works on more terminals, including
              xterms.  Thanks Scott Pakin.

              g3topbm: Add -correctlong

              build: Add COMPILED_BY environment variable to control the
              "compiled by" value from --version common option.  This helps
              with creating reproducible builds.

              pnmtojpeg: minor improvement to error messages about bad files.

              pammixmulti: Remove disclaimer of patent license.

              pamstack: Fix bug: acts like -firstmaxval specified when it
              wasn't.  Introduced in Netpbm 11.03 (June 2023).

              pamstack: Fix -lcmmaxval: chooses wrong maxval.  Always
              broken (-lcmmaxval was new in Netpbm 11.03 (June 2023)).
