@@ -102,8 +102,12 @@ pm_accept_to_memory(int    const pipetosuckFd,
                     void * const accepterParm);
 
 void
-pm_feed_from_filestream(int    const pipeToFeedFd,
-                        void * const feederParm);
+pm_feed_from_file(int    const pipeToFeedFd,
+                  void * const feederParm);
+
+void
+pm_accept_to_file(int    const pipetosuckFd,
+                  void * const accepterParm);
 
 void
 pm_accept_to_filestream(int    const pipetosuckFd,
